# tcp_cmake

./: .gitignore  CMakeLists.txt  README.md  connect.cpp  connect.h  local_config.cmake.sln  local_config.txt  tcp_cmake.cpp
tcp_cmake/x64/Debug/: tcp_cmake.exe.recipe
